Fixes contrast errors

--- a/src/_includes/css/site.css
+++ b/src/_includes/css/site.css
@@ -6,7 +6,7 @@
    */
   --color-black: #221f2b;
   --color-white: #fafafa;
-  --color-black-lighter: #767380;
+  --color-black-lighter: #696672;
   --color-black-lightest: rgba(34, 31, 43, .08);
   --color-blue: #2858e3;
   --color-blue-lighter: #8faafd;
